--- a/manifest.json
+++ b/manifest.json
@@ -2,34 +2,23 @@
 	"manifest_version": 2,
 	"name": "Facebook 30 min a day",
 	"version": "0.1",
-	//
 	"description": "Restrict facebook usage for 30 mins a day",
 	"default_locale": "en",
-	//
-
-	//"background_page": "background.html",
-	//"popup": "popup.html",
 	"options_page": "options.html",
 	"permissions": [
-		//"windows",
 		"background",
 		"tabs",
 		"storage",
 		"geolocation"
 	],
-
 	"browser_action": {
 		"default_title": "How many minutes have you use facebook",
 		"default_popup": "popup.html"
 	},
-
 	"author": "cyberrob",
 	"background": {
 		"persistent": false,
-		//"scripts": ["background.js"]
 		"page": "background.html"
-
 	},
-
-	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"content_security_policy": "script-src 'self' 'unsafe-eval';'unsafe-inline'; object-src 'self'"
 }
