--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "__MSG_extName__",
 	"version": "0.1",
 	"description": "__MSG_extDescription__",
-	"default_locale": "zh_TW",
+	"default_locale": "en",
 	"options_page": "options.html",
 
 	"icons": {
@@ -14,8 +14,9 @@
 	"permissions": [
 		"background",
 		"tabs",
+		"https://www.google-analytics.com/",
 		"storage",
-		"geolocation",
+		//"geolocation",
 		"unlimitedStorage",
 		"alarms"
 	],
@@ -24,7 +25,7 @@
 		"default_title": "__MSG_extDescription__",
 		"default_popup": "popup.html"
 	},
-	"author": "cyberrob",
+	"author": "@cyberrob",
 	"background": {
 		"persistent": true,
 		"page": "background.html"
