--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "__MSG_extName__",
-	"version": "0.1",
+	"version": "0.1.2",
 	"description": "__MSG_extDescription__",
 	"default_locale": "en",
 	"options_page": "options.html",
@@ -14,7 +14,6 @@
 	"permissions": [
 		"background",
 		"tabs",
-		"https://www.google-analytics.com/",
 		"storage",
 		"unlimitedStorage",
 		"alarms"
@@ -28,5 +27,6 @@
 	"background": {
 		"persistent": true,
 		"page": "background.html"
-	}
+	},
+	"content_security_policy": "script-src 'self' 'unsafe-eval';'unsafe-inline'; object-src 'self'"
 }
